chnage the style of cards in shop and home page

--- a/ecommerce-angular/src/app/layout/footer/footer.component.scss
+++ b/ecommerce-angular/src/app/layout/footer/footer.component.scss
@@ -103,9 +103,15 @@
     }
 }
 @media (max-width: 500px) {
+    
    .footerlinks{
     font-size: 13px;
    
    }
+   .footerContainer2{
+        img{
+            width:80% !important;
+        }
+    }
 }
 
