--- a/ecommerce-angular/src/app/pages/home/hero-section/hero-section.component.html
+++ b/ecommerce-angular/src/app/pages/home/hero-section/hero-section.component.html
@@ -19,7 +19,8 @@
             <p>New Collection</p>
             <app-button
             label="SHOP NOW"
-            appearance="primary">
+            appearance="primary"
+            [routerLink]="'/shop'">
             </app-button>
         </div>
         </div>
