--- a/ecommerce-angular/src/app/pages/home/home.component.html
+++ b/ecommerce-angular/src/app/pages/home/home.component.html
@@ -2,4 +2,5 @@
 <app-brands-section></app-brands-section>
 <app-deals-section></app-deals-section>
 <app-trending-products></app-trending-products>
+<app-find-fashion-section></app-find-fashion-section>
 <app-instagram-section></app-instagram-section>
