--- a/ecommerce-angular/src/app/shared/components/find-fashion-section/find-fashion-section.component.scss
+++ b/ecommerce-angular/src/app/shared/components/find-fashion-section/find-fashion-section.component.scss
@@ -1,4 +1,5 @@
 .fashionContainer{
+    margin-top: 60px !important;
     display: flex;
     justify-content: space-around;
     align-items:center;
