--- a/ecommerce-angular/src/app/shared/components/product-card/product-card.component.html
+++ b/ecommerce-angular/src/app/shared/components/product-card/product-card.component.html
@@ -1,6 +1,8 @@
 <a [routerLink]="['/product', productId]" style="cursor: pointer;">
 <mat-card class="deal-card">
+  <div class="img-container">
   <img mat-card-image [src]="image" [alt]="title" />
+  </div>
   <mat-card-content>
     <h2>{{ title }}</h2>
     <p>{{ desc }}</p>
