--- a/ecommerce-angular/src/app/layout/header/header.component.scss
+++ b/ecommerce-angular/src/app/layout/header/header.component.scss
@@ -23,9 +23,24 @@ $color-dark-text: #484848;
 
 }
 .HeaderIcons{
+    .nav-icon {
+        width: 40px; 
+  height: 40px; 
+    line-height: 40px; 
+  i{
+     font-size: 1.3rem;
+
+  }
+    }
     a{
         color: #484848;
         padding: 5px;
         
+    }
+    .search-input {
+width: 250px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  margin-right: 5px;
     }
 }
