--- a/ecommerce-angular/src/app/pages/checkout/checkout.component.html
+++ b/ecommerce-angular/src/app/pages/checkout/checkout.component.html
@@ -3,6 +3,11 @@
   <div class="title">
     <h2>Checkout</h2>
   </div>
+<div *ngIf="cartItems.length === 0; else cartList" class="emptyCart">
+     <p>Your cart is empty.</p>
+     </div>
+     <ng-template #cartList>
+    <div *ngIf="!checkoutComplete; else successMessage">
 
   <div class="checkoutContainer">
     <div class="inputTypes">
@@ -78,11 +83,8 @@
 </app-button>
       </form>
     </div>
-<div *ngIf="cartItems.length === 0; else cartList" class="emptyCart">
-     <p>Your cart is empty.</p>
-     </div>
+
     
-     <ng-template #cartList>
 
     <div class="products">
       
@@ -128,8 +130,18 @@
           </div>
 
     </div>
-    </ng-template>
+    
   </div>
+  </div>
+</ng-template>
+<ng-template #successMessage>
+  <div class="checkout-success text-center mt-5">
+    <h2>Thank you for your order!</h2>
+    <p> Our team is hand-picking your items and will deliver them soon.</p>
+    <p>Total: ${{ getTotalCost() + 40 }}</p>
+    <a routerLink="/" class="btn btn-primary mt-3">Back to Home</a>
+  </div>
+</ng-template>
 </div>
 
 <app-footer></app-footer>
