--- a/ecommerce-angular/src/app/layout/header/header.component.html
+++ b/ecommerce-angular/src/app/layout/header/header.component.html
@@ -32,7 +32,7 @@
       <!-- Right side of navbar -->
       <div class="d-flex align-items-center gap-3">
         <!-- If NOT logged in: show Sign in / Sign up -->
-        <!-- <ng-container *ngIf="authService.isLoggedIn() else guestButtons"> -->
+        <ng-container *ngIf="authService.isLoggedIn() else guestButtons">
           <div class="HeaderIcons">
  
 
@@ -58,7 +58,7 @@
     <i class="bi me-1"></i> Logout
   </button>
   </div>
-<!-- </ng-container> -->
+</ng-container>
 
 <ng-template #guestButtons>
   <!-- Sign in / Sign up -->
